--- a/_posts/2024-01-20-dtd.md
+++ b/_posts/2024-01-20-dtd.md
@@ -159,7 +159,7 @@ EJEMPLO El siguiente documento XML está asociado a una DTD externa pública:
 </html>
 ```
 
-`-//W3C//DTD XHTML 1.0 Strict//EN` es un FPI (Formal Public Identifier, Identificador Público Formal).
+- `//W3C//DTD XHTML 1.0 Strict//EN` es un FPI (Formal Public Identifier, Identificador Público Formal).
 
 {:.subsection}
 ### Cuándo utilizar una DTD interna o una DTD externa
