--- a/_posts/2024-01-20-dtd.md
+++ b/_posts/2024-01-20-dtd.md
@@ -14,9 +14,12 @@ DTD (Document Type Definition, Definición de Tipo de Documento) sirve para defi
 - **SGML** (Standard Generalized Markup Language, Lenguaje de Marcado Generalizado Estándar). Véase: <http://www.w3.org/MarkUp/SGML/>.
 - **XML** (eXtensible Markup Language, Lenguaje de Marcado eXtensible) es un lenguaje desarrollado por W3C (World Wide Web Consortium) que está basado en SGML.
 
-En <http://www.w3.org/TR/xml/> se puede consultar la W3C Recommendation de XML, en la cual se fundamenta este tutorial, donde se explica -de forma introductoria a través de ejemplos- cómo escribir y utilizar DTD para validar documentos XML.
+En <http://www.w3.org/TR/xml/> se puede consultar la W3C Recommendation de XML, en la cual se fundamenta este artículo, donde se explica -de forma introductoria a través de ejemplos- cómo escribir y utilizar DTD para validar documentos XML.
 
 Un documento XML es válido (valid) cuando, además de estar bien formado, no incumple ninguna de las normas establecidas en su estructura.
+
+{:.question}
+¿Qué diferencia hay entre un documento XML válido y uno bien formado?
 
 Existen otros métodos que también permiten validar documentos XML, como por ejemplo XML Schema o RELAX NG.
 
@@ -66,8 +69,8 @@ EJEMPLO En un documento XML se quiere guardar una lista de marcadores de página
 ```
 {: file="marcadores-con-dtd-interna.xml" }
 
-- Obsérvese que, en la DTD se ha indicado que marcadores es el elemento raíz del documento XML, el cual puede contener cero o más páginas. Para indicar esto último, se ha escrito: `(pagina)*`.
-- Escribiendo pagina (`nombre, descripcion, url`) se especifica que, cada elemento `pagina` tiene que contener tres elementos (hijos): `nombre`, `descripcion` y `url`.
+- Obsérvese que, en la DTD se ha indicado que `marcadores` es el elemento raíz del documento XML, el cual puede contener cero o más páginas. Para indicar esto último, se ha escrito: `(pagina)*`.
+- Escribiendo `pagina (nombre, descripcion, url)` se especifica que, cada elemento `pagina` tiene que contener tres elementos (hijos): `nombre`, `descripcion` y `url`.
 - Con `#PCDATA` (Parsed Character Data) escrito entre paréntesis `()` se indica que los elementos `nombre`, `descripcion` y `url` pueden contener texto (cadenas de caracteres) analizable por un procesador XML.
 
 > Al nombrar a los elementos `pagina` y `descripcion` no se han utilizado los caracteres (á) y (ó), respectivamente, para evitar posibles incompatibilidades con programas que puedan no reconocerlos.
@@ -78,8 +81,8 @@ EJEMPLO En un documento XML se quiere guardar una lista de marcadores de página
 
 Al ver el archivo `marcadores-con-dtd-interna.xml`{: .filepath} en un navegador web, como por ejemplo Google Chrome, se visualizará algo similar a:
 
-![Visualización del archivo marcadores-con-dtd-interna.xml en Google Chrome](marcadores-con-dtd-interna-chrome.gif)
-_Visualización del archivo marcadores-con-dtd-interna.xml en Google Chrome_
+![Visualización del archivo "marcadores-con-dtd-interna.xml" en Google Chrome](marcadores-con-dtd-interna-chrome.gif)
+_Visualización del archivo "marcadores-con-dtd-interna.xml" en Google Chrome_
 
 Como se puede observar, la DTD no se muestra en el navegador.
 
@@ -97,6 +100,22 @@ Existen dos tipos de DTD externa: privada y pública. Para las privadas se utili
 ```xml
 <!DOCTYPE elemento-raíz PUBLIC "identificador-público" "URI">
 ```
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué es una URI?</summary>
+  <div class="card-body" markdown="1">
+
+URI (Uniform Resource Identifier, en español identificador uniforme de recursos) se emplea para todos los tipos de nombres y direcciones que se refieren a objetos internet tales como páginas, imágenes, videos, etc.
+
+Un URI es por tanto una cadena de caracteres que se utilizan para identificar un recurso o un nombre en internet. Su propósito es permitir la interacción entre diferentes recursos en Internet y otro tipo de red.
+
+En este caso, es la ubicación del DTD, ya sea local o en una ubicación pública en la web. Lo que proporciona una forma directa de acceder y recuperar el DTD.
+
+Es posible especificar tanto FPI como URI en una declaración DOCTYPE. La combinación de FPI y URI permite que el DTD sea identificado de manera única mediante el FPI y, al mismo tiempo, permite su recuperación directa a través de la URI en caso de que sea necesario.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 {:.subsubsection}
 #### DTD externa privada - SYSTEM
@@ -159,7 +178,17 @@ EJEMPLO El siguiente documento XML está asociado a una DTD externa pública:
 </html>
 ```
 
-- `//W3C//DTD XHTML 1.0 Strict//EN` es un FPI (Formal Public Identifier, Identificador Público Formal).
+`-//W3C//DTD XHTML 1.0 Strict//EN` es un FPI (Formal Public Identifier, Identificador Público Formal). En este caso, el FPI es utilizado para identificar de manera única el DTD, y la URI proporciona la ubicación (única) para recuperar el DTD directamente si es necesario. Esto brinda flexibilidad y eficiencia en la validación del documento XML.
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Para qué sirve un FPI?</summary>
+  <div class="card-body" markdown="1">
+
+El FPI proporciona información sobre la organización, el tipo de documento y el idioma. Este se puede utilizar para identificar el DTD, pero no proporciona la ubicación específica del archivo.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 {:.subsection}
 ### Cuándo utilizar una DTD interna o una DTD externa
@@ -167,6 +196,9 @@ EJEMPLO El siguiente documento XML está asociado a una DTD externa pública:
 Para validar más de un documento XML con la misma DTD, escribir esta en un archivo externo proporciona la ventaja de no tener que repetir la DTD internamente en cada documento XML.
 
 En el caso de que la DTD solo se utilice para validar un único documento XML, la DTD es habitual escribirla internamente.
+
+{:.question}
+¿Cuándo es recomendable usar una DTD externa?
 
 {:.subsection}
 ### Uso combinado de DTD interna y externa en un documento XML
@@ -242,12 +274,12 @@ Para declarar un elemento en una DTD se utiliza la siguiente sintaxis:
 
 En el tipo de contenido se especifica el contenido permitido en el elemento, pudiendo ser:
 
-- Texto, (`#PCDATA`).
+- Texto, `(#PCDATA)`.
 - Otros elementos (hijos).
 - Estar vacío, `EMPTY`.
 - Mixto (texto y otros elementos), `ANY`.
 
-**El contenido de un elemento puede ser texto - (`#PCDATA`)**
+**El contenido de un elemento puede ser texto - (#PCDATA)**
 
 EJEMPLO En el siguiente documento XML, el elemento `ciudad` puede contener cualquier texto (cadena de caracteres):
 
@@ -280,9 +312,9 @@ EJEMPLO En el siguiente ejemplo, el elemento `ciudad` contiene a los elementos `
 </ciudad>
 ```
 
-**Un elemento puede no contener contenido (estar vacío) - `EMPTY`**
+**Un elemento puede no contener contenido (estar vacío) - EMPTY**
 
-EJEMPLO En la DTD interna del siguiente documento XML, se ha declarado el elemento `mayor_de_edad` como vacío, EMPTY. Por tanto, debe escribirse <mayor_de_edad/>:
+EJEMPLO En la DTD interna del siguiente documento XML, se ha declarado el elemento `mayor_de_edad` como vacío, `EMPTY`. Por tanto, debe escribirse `<mayor_de_edad/>`:
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -303,9 +335,9 @@ EJEMPLO En la DTD interna del siguiente documento XML, se ha declarado el elemen
 > Los elementos vacíos no pueden tener contenido, pero sí pueden tener atributos.
 {:.prompt-info}
 
-**Un elemento puede definirse para contener contenido mixto - `ANY`**
+**Un elemento puede definirse para contener contenido mixto - ANY**
 
-EJEMPLO En la DTD interna del siguiente documento XML, se ha indicado que el elemento `persona` puede contener texto y otros elementos, es decir, contenido mixto, ANY:
+EJEMPLO En la DTD interna del siguiente documento XML, se ha indicado que el elemento `persona` puede contener texto y otros elementos, es decir, contenido mixto, `ANY`:
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -366,7 +398,7 @@ Incluso, si el elemento `persona` estuviese vacío, el documento también sería
 {:.subsection}
 ### Elementos vacíos - EMPTY
 
-Para declarar un elemento vacío en una DTD, hay que indicar que su contenido es EMPTY. Un ejemplo de ello podría ser el elemento `br` del HTML, el cual sirve para hacer un salto de línea y no tiene contenido:
+Para declarar un elemento vacío en una DTD, hay que indicar que su contenido es `EMPTY`. Un ejemplo de ello podría ser el elemento `br` del HTML, el cual sirve para hacer un salto de línea y no tiene contenido:
 
 ```xml
 <!ELEMENT br EMPTY>
@@ -421,7 +453,7 @@ En este ejemplo, para el elemento `br` se ha declarado el atributo `descripcion`
 {:.subsection}
 ### Elementos con cualquier contenido - ANY
 
-Cuando en una DTD se quiere declarar un elemento que pueda contener cualquier contenido -bien sea texto, otros elementos o una mezcla de ambos- esto se puede hacer indicando que su contenido es de tipo ANY:
+Cuando en una DTD se quiere declarar un elemento que pueda contener cualquier contenido -bien sea texto, otros elementos o una mezcla de ambos- esto se puede hacer indicando que su contenido es de tipo `ANY`:
 
 ```xml
 <!ELEMENT cualquier_contenido ANY>
@@ -633,7 +665,7 @@ En una DTD, para definir el número de veces que pueden aparecer los elementos d
 {:.prompt-info}
 
 {:.subsubsection}
-#### Operador de cardinalidad `+` (signo más)
+#### Operador de cardinalidad "+" (signo más)
 
 EJEMPLO En el siguiente documento XML, el elemento `nombre` tiene que aparecer una o más veces. En este caso, aparece tres veces:
 
@@ -651,11 +683,11 @@ EJEMPLO En el siguiente documento XML, el elemento `nombre` tiene que aparecer u
 </personas>
 ```
 
-Si sobre nombre no actuase el operador (+) el documento no sería válido, ya que, el elemento `personas` solo tendría que contener un elemento `nombre`.
-En vez de (nombre+), también se puede escribir (nombre)+.
+Si sobre `nombre` no actuase el operador (`+`) el documento no sería válido, ya que, el elemento `personas` solo tendría que contener un elemento `nombre`.
+En vez de `(nombre+)`, también se puede escribir `(nombre)+`.
 
 {:.subsubsection}
-#### Operador de cardinalidad `*` (asterisco)
+#### Operador de cardinalidad "*" (asterisco)
 
 EJEMPLO En la DTD interna del siguiente documento XML, se ha indicado que el elemento `nombre` tiene que aparecer una única vez. Ahora bien, el elemento `ingrediente` tiene cardinalidad (0-n), por tanto, puede aparecer cero, una o más veces:
 
@@ -677,7 +709,7 @@ EJEMPLO En la DTD interna del siguiente documento XML, se ha indicado que el ele
 ```
 
 {:.subsubsection}
-#### Operador de cardinalidad `?` (interrogación)
+#### Operador de cardinalidad "?" (interrogación)
 
 EJEMPLO En la DTD del siguiente documento XML, la cardinalidad del elemento `mayor_de_edad` es (0-1), siendo opcional su aparición:
 
@@ -716,7 +748,7 @@ Así pues, el siguiente documento también es válido:
 En la DTD asociada a un documento XML, se pueden declarar elementos que contengan elementos opcionales. Para ello, se utiliza el operador de elección, representado por una barra vertical (`|`).
 
 {:.subsubsection}
-#### Operador de elección `|` (barra vertical)
+#### Operador de elección "\|" (barra vertical)
 
 EJEMPLO En el siguiente documento XML el elemento `articulo` puede contener un elemento `codigo` o un elemento `id`; obligatoriamente uno de ellos, pero no ambos:
 
@@ -734,7 +766,7 @@ EJEMPLO En el siguiente documento XML el elemento `articulo` puede contener un e
 ```
 
 {:.subsubsection}
-#### Operador de elección `|` y operador `*`
+#### Operador de elección "\|" y operador "*"
 
 EJEMPLO En la DTD del siguiente documento XML se indica que el elemento `articulos` puede contener varios elementos `codigo` e `id`:
 
