--- a/_posts/2024-01-20-dtd.md
+++ b/_posts/2024-01-20-dtd.md
@@ -799,7 +799,7 @@ Obsérvese que, con el operador `*`, en este ejemplo se ha indicado que el conte
 Nótese también que, dentro del elemento `articulos` pueden aparecer elementos `codigo` e `id` en cualquier orden.
 
 {:.subsubsection}
-#### Operador de elección `|` en una secuencia de elementos
+#### Operador de elección \| en una secuencia de elementos
 
 EJEMPLO En el siguiente documento XML, pueden aparecer cero o más elementos `articulo` que contengan un elemento `codigo` o un elemento `id`, y obligatoriamente un elemento `nombre`:
 
@@ -933,9 +933,9 @@ EJEMPLO En la DTD del siguiente documento XML se ha indicado que el elemento `f1
 </deportistas>
 ```
 
-- Para el elemento `f1`, pais es un atributo definido de tipo CDATA (Character DATA), es decir, su valor será una cadena de caracteres.
+- Para el elemento `f1`, `pais` es un atributo definido de tipo `CDATA` (Character DATA), es decir, su valor será una cadena de caracteres.
 - Al no indicarse el país de Fernando Alonso, por defecto es `España`.
-- Para Sebastian Vettel, al atributo `pais` se le ha asignado `Alemania`, que es un valor distinto al valor-del-atributo, que por defecto es `España`.
+- Para Sebastian Vettel, al atributo `pais` se le ha asignado `Alemania`, que es un valor distinto al `valor-del-atributo`, que por defecto es `España`.
 
 Al visualizar el documento XML en un navegador web, se verá algo parecido a:
 
@@ -983,14 +983,14 @@ En DTD, existen los siguientes tipos de declaración de atributos:
 
 | Valor                                                 | Significado                             |
 |-------------------------------------------------------|-----------------------------------------|
-| valor entre comillas dobles (`"`) o simples (`'`).    | El atributo tiene un valor por defecto. |
+| `valor` entre comillas dobles (`"`) o simples (`'`).    | El atributo tiene un valor por defecto. |
 | `#REQUIRED`                                           | El atributo es obligatorio escribirlo.  |
 | `#IMPLIED`                                            | El atributo es opcional escribirlo.     |
 | `#FIXED valor` entre comillas dobles (`"`) o simples (`'`). | El valor del atributo es fijo.    |
 
 En el apartado anterior de este tutorial "Atributos", se muestra un ejemplo declaración de atributo con un valor por defecto.
 
-Respecto a los otros tipos de declaración de atributos (#REQUIRED, #IMPLIED y #FIXED valor), en los siguientes apartados se muestran ejemplos:
+Respecto a los otros tipos de declaración de atributos (`#REQUIRED`, `#IMPLIED` y `#FIXED valor`), en los siguientes apartados se muestran ejemplos:
 
 - Atributo obligatorio - `#REQUIRED`
 - Atributo opcional - `#IMPLIED`
@@ -1018,7 +1018,7 @@ EJEMPLO En la DTD interna del siguiente documento XML se ha declarado un atribut
 </deportistas>
 ```
 
-En este ejemplo, es obligatorio escribir el atributo `pais` en los elementos `f1`. Por tanto, aunque el documento XML está bien formado, habría que indicar el pais de Fernando Alonso para que fuese válido.
+En este ejemplo, es obligatorio escribir el atributo `pais` en los elementos `f1`. Por tanto, aunque el documento XML está bien formado, habría que indicar el `pais` de Fernando Alonso para que fuese válido.
 
 ```xml
 <f1 pais="España">Fernando Alonso</f1>
@@ -1053,7 +1053,7 @@ En este caso, el atributo `pais` es opcional para los elementos `f1` que aparezc
 {:.subsection}
 ### Atributo con valor fijo - #FIXED valor
 
-EJEMPLO Cuando en una DTD, se quiere declarar un atributo que tome un valor fijo, esto se puede hacer con #FIXED valor:
+EJEMPLO Cuando en una DTD, se quiere declarar un atributo que tome un valor fijo, esto se puede hacer con `#FIXED valor`:
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -1086,24 +1086,24 @@ En DTD, existen los siguientes tipos de atributos:
 
 | Tipo       | Descripción                                                                                                                                                                            |
 |------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| CDATA      | (Character DATA) El valor son datos de tipo carácter, es decir, texto.                                                                                                                 |
+| `CDATA`      | (Character DATA) El valor son datos de tipo carácter, es decir, texto.                                                                                                                 |
 | Enumerado  | El valor puede ser uno de los pertenecientes a una lista de valores escritos entre paréntesis `()` y separados por el carácter `|`.                                                   |
-| ID         | El valor es un identificador único.                                                                                                                                                    |
-| IDREF      | El valor es un identificador que tiene que existir en otro atributo ID del documento XML.                                                                                              |
-| IDREFS     | El valor es una lista de valores que existan en otros atributos ID del documento XML, separados por espacios en blanco.                                                                |
-| NMTOKEN    | El valor es una cadena de caracteres, pudiendo contener letras minúsculas, letras mayúsculas, números, puntos `.`, guiones medios `-`, guiones bajos `_` o el carácter dos puntos `:`. |
-| NMTOKENS   | El valor puede contener uno o varios valores de tipo `NMTOKEN` separados por espacios en blanco.                                                                                         |
-| NOTATION   | El valor es el nombre de una notación.                                                                                                                                                 |
-| ENTITY     | El valor es el nombre de una entidad.                                                                                                                                                  |
-| ENTITIES   | El valor puede contener uno o varios valores de tipo `ENTITY` separados por espacios en blanco.                                                                                          |
+| `ID`         | El valor es un identificador único.                                                                                                                                                    |
+| `IDREF`      | El valor es un identificador que tiene que existir en otro atributo `ID` del documento XML.                                                                                              |
+| `IDREFS`     | El valor es una lista de valores que existan en otros atributos `ID` del documento XML, separados por espacios en blanco.                                                                |
+| `NMTOKEN`    | El valor es una cadena de caracteres, pudiendo contener letras minúsculas, letras mayúsculas, números, puntos `.`, guiones medios `-`, guiones bajos `_` o el carácter dos puntos `:`. |
+| `NMTOKENS`   | El valor puede contener uno o varios valores de tipo `NMTOKEN` separados por espacios en blanco.                                                                                         |
+| `NOTATION`   | El valor es el nombre de una notación.                                                                                                                                                 |
+| `ENTITY`     | El valor es el nombre de una entidad.                                                                                                                                                  |
+| `ENTITIES`   | El valor puede contener uno o varios valores de tipo `ENTITY` separados por espacios en blanco.                                                                                          |
 | Especiales | Existen dos atributos especiales: `xml:lang` y `xml:space`.                                                                                                                                |
 
 {:.subsection}
 ### Atributos de tipo CDATA
 
-En una DTD, un atributo de tipo CDATA (Character DATA), es aquel cuyo valor puede ser una cadena de caracteres (texto).
+En una DTD, un atributo de tipo `CDATA` (Character DATA), es aquel cuyo valor puede ser una cadena de caracteres (texto).
 
-EJEMPLO En la DTD del siguiente documento XML, el atributo `pais` del elemento `ciudad` ha sido declarado de tipo CDATA:
+EJEMPLO En la DTD del siguiente documento XML, el atributo `pais` del elemento `ciudad` ha sido declarado de tipo `CDATA`:
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -1126,7 +1126,7 @@ Obsérvese que, el valor del atributo `pais` puede estar vacío.
 {:.subsection}
 ### Atributos de tipo enumerado
 
-En una DTD, se puede declarar un atributo de tipo enumerado indicando que su valor puede ser uno de los pertenecientes a una lista de valores escritos entre paréntesis `()` y separados por el carácter `|`.
+En una DTD, se puede declarar un atributo de tipo enumerado indicando que **su valor puede ser uno de los pertenecientes a una lista de valores** escritos entre paréntesis `()` y separados por el carácter `|`.
 
 EJEMPLO En la DTD del siguiente documento XML, los valores posibles del atributo `pais` son `ESP`, `FRA`, `ITA` y `ALE`:
 
@@ -1149,9 +1149,12 @@ EJEMPLO En la DTD del siguiente documento XML, los valores posibles del atributo
 ```
 
 Véase que, en este caso, se ha especificado `ESP` como valor por defecto, siendo obligatorio que esté en la lista de valores escritos entre paréntesis `()`.
+
 Al visualizar este documento en un navegador web, en pantalla se verá:
 
-Visualización del archivo deportistas.xml con un atributo de tipo enumerado.
+![Visualización del archivo deportistas.xml con un atributo de tipo enumerado.](deportistas-con-atributo-de-tipo-enumerado-en-una-dtd.gif)
+_Visualización del archivo deportistas.xml con un atributo de tipo enumerado._
+
 Si se quiere definir el atributo `pais` obligatorio, habría que escribir:
 
 ```xml
@@ -1188,7 +1191,7 @@ EJEMPLO En la DTD del siguiente documento XML, el atributo `codigo` del elemento
 
 Hay que tener en cuenta que:
 
-- Los valores de atributos ID, tienen que cumplir las mismas normas de sintaxis utilizadas para escribir nombres en XML.
+- Los valores de atributos `ID`, tienen que cumplir las mismas [normas de sintaxis utilizadas para escribir nombres en XML](https://www.abrirllave.com/xml/normas-de-sintaxis-basicas.php).
 - Cada elemento escrito en un documento XML, solo puede tener un atributo `ID`.
 - En un documento XML, no pueden escribirse dos elementos que tengan el mismo valor en un atributo `ID`, aunque dicho atributo sea distinto.
 - Todo atributo declarado de tipo ID tiene que ser `#IMPLIED` (opcional) o `#REQUIRED` (obligatorio).
@@ -1232,7 +1235,7 @@ En este documento XML, el atributo de tipo `IDREF` se ha definido obligatorio, `
 {:.subsection}
 ### Atributos de tipo IDREFS
 
-En una DTD, los atributos declarados `IDREFS` son aquellos cuyo valor puede ser una lista de valores que existan en otros atributos ID del documento XML.
+En una DTD, los atributos declarados `IDREFS` son aquellos cuyo valor puede ser una lista de valores que existan en otros atributos `ID` del documento XML.
 
 EJEMPLO En la DTD del siguiente documento XML, se indica que el valor del atributo `filmografia` de un elemento `director`, puede ser una lista de valores de atributos `ID`. En este caso, una lista de valores escritos en el atributo `codpel` de los elementos `pelicula` que aparezcan en el documento XML:
 
@@ -1373,6 +1376,9 @@ CSharp 5.0 y Java 8.0 son identificadores públicos.
 
 En una DTD, los atributos declarados `ENTITY` son aquellos cuyo valor puede ser el nombre de una entidad.
 
+{:.question}
+¿Qué es una entidad?
+
 {:.subsubsection}
 #### Uso de ENTITY y NOTATION
 
@@ -1397,11 +1403,9 @@ EJEMPLO En la DTD del siguiente documento XML, se indica que los elementos `anim
 </animales>
 ```
 
-En la DTD de este ejemplo se está indicando que los valores -datos- de las entidades (`ballena` y `delfin`) van a ser cargados desde una URI (Uniform Resource Identifier, Identificador Uniforme de Recurso). En este caso, se hace referencia a los archivos externos `ballena.gif`{: .filepath} y `delfin.gif`{: .filepath}.
-
-Con `NDATA` (Notation Data) se ha asociado a las entidades `ballena` y `delfin` con la notación `gif`.
-
-La notación `gif` es una declaración del tipo MIME image/gif.
+- En la DTD de este ejemplo se está indicando que los valores -datos- de las entidades (`ballena` y `delfin`) van a ser cargados desde una URI (Uniform Resource Identifier, Identificador Uniforme de Recurso). En este caso, se hace referencia a los archivos externos `ballena.gif`{: .filepath} y `delfin.gif`{: .filepath}.
+- Con `NDATA` (Notation Data) se ha asociado a las entidades `ballena` y `delfin` con la notación `gif`.
+- La notación `gif` es una declaración del tipo MIME image/gif.
 
 {:.subsection}
 ### Atributos de tipo ENTITIES
@@ -1437,11 +1441,9 @@ EJEMPLO En la DTD del siguiente documento XML, el atributo `imagenes` del elemen
 </animales>
 ```
 
-En la DTD de este ejemplo se está indicando que los valores -datos- de las entidades (`ballena`, `delfin`, `elefante`, `leon` y `oso`) van a ser cargados desde una URI (Uniform Resource Identifier, Identificador Uniforme de Recurso). En este caso, se hace referencia a los archivos externos `ballena.gif`, `delfin.gif`, `elefante.gif`, `leon.gif` y `oso.gif`.
-
-Con `NDATA` (Notation Data) se ha asociado a las entidades `ballena`, `delfin`, `elefante`, `leon` y `oso` con la notación `gif`.
-
-La notación `gif` es una declaración del tipo MIME image/gif.
+- En la DTD de este ejemplo se está indicando que los valores -datos- de las entidades (`ballena`, `delfin`, `elefante`, `leon` y `oso`) van a ser cargados desde una URI (Uniform Resource Identifier, Identificador Uniforme de Recurso). En este caso, se hace referencia a los archivos externos `ballena.gif`{: .filepath}, `delfin.gif`{: .filepath}, `elefante.gif`{: .filepath}, `leon.gif`{: .filepath} y `oso.gif`{: .filepath}.
+- Con `NDATA` (Notation Data) se ha asociado a las entidades `ballena`, `delfin`, `elefante`, `leon` y `oso` con la notación `gif`.
+- La notación `gif` es una declaración del tipo MIME image/gif.
 
 {:.subsection}
 ### Atributos especiales
@@ -1482,11 +1484,9 @@ EJEMPLO En la DTD del siguiente documento XML, con el atributo `xml:lang` se ha 
 </siglas>
 ```
 
-Inicialmente, para el elemento `sigla` se ha indicado el idioma inglés, `en`, por defecto.
-
-No obstante, después se ha fijado el valor `es`, del español, para el atributo `xml:lang` del elemento `traduccion`.
-
-Por otra parte, para el CERN se ha especificado que el idioma es el francés, `fr`.
+- Inicialmente, para el elemento `sigla` se ha indicado el idioma inglés, `en`, por defecto.
+- No obstante, después se ha fijado el valor `es`, del español, para el atributo `xml:lang` del elemento `traduccion`.
+- Por otra parte, para el CERN se ha especificado que el idioma es el francés, `fr`.
 
 {:.subsubsection}
 #### Uso del atributo xml:space
@@ -1547,7 +1547,9 @@ No obstante, tal y como está declarado el atributo `xml:space` del elemento `pr
 {:.section}
 ## Declaración de entidades
 
-En una DTD se pueden declarar entidades generales y paramétricas (de parámetro). Las entidades generales pueden ser:
+En una DTD se pueden declarar entidades generales y paramétricas (de parámetro). 
+
+Las entidades generales pueden ser:
 
 - Entidades generales internas analizables
 - Entidades generales externas analizables
@@ -1599,10 +1601,13 @@ Si este documento XML se visualizase en un navegador web, se vería algo parecid
 ![imgDescription](textos-con-entidades-generales-internas-analizables-en-una-dtd.gif)
 _Visualización del archivo textos.xml en Google Chrome_
 
+{:.question}
+¿Qué es una entidad general?
+
 {:.subsection}
 ### Entidades generales externas analizables
 
-En una DTD se pueden declarar dos tipos de entidades generales externas analizables (parsed): privadas y públicas. Para las privadas se utiliza SYSTEM, y para las públicas PUBLIC. La sintaxis en cada caso es:
+En una DTD se pueden declarar dos tipos de entidades generales externas analizables (parsed): privadas y públicas. Para las privadas se utiliza `SYSTEM`, y para las públicas `PUBLIC`. La sintaxis en cada caso es:
 
 ```xml
 <!ENTITY nombre-de-la-entidad SYSTEM "URI">
@@ -1615,7 +1620,7 @@ En una DTD se pueden declarar dos tipos de entidades generales externas analizab
 {:.subsubsection}
 #### Entidades generales externas analizables privadas - SYSTEM
 
-EJEMPLO En la DTD del siguiente documento XML, se ha declarado la entidad escritor:
+EJEMPLO En la DTD del siguiente documento XML, se ha declarado la entidad `escritor`:
 
 ```xml
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
@@ -1631,11 +1636,12 @@ EJEMPLO En la DTD del siguiente documento XML, se ha declarado la entidad escrit
 </textos>
 ```
 
-Suponiendo que el archivo `escritor.txt` contenga:
+Suponiendo que el archivo `escritor.txt`{: .filepath} contenga:
 
 ```plaintext
 Miguel de Cervantes
 ```
+{: file="escritor.txt" }
 
 En un navegador web (por ejemplo en Internet Explorer 8) se podrá ver:
 
@@ -1695,16 +1701,14 @@ EJEMPLO En la DTD del siguiente documento XML, se indica que el elemento `imagen
 <imagen fuente="logo"/>
 ```
 
-En la DTD de este ejemplo se está indicando que el valor -datos- de la entidad `logo` va a ser cargado desde una URI. En este caso, se hace referencia al archivo `logo.gif`{: .filepath}.
-
-Con NDATA (Notation Data) se indica que la entidad no es analizable y, en este caso, se ha asociado a la entidad `logo` con la notación gif.
-
-La notación gif es una declaración del tipo MIME image/gif.
+- En la DTD de este ejemplo se está indicando que el valor -datos- de la entidad `logo` va a ser cargado desde una URI. En este caso, se hace referencia al archivo `logo.gif`{: .filepath}.
+- Con NDATA (Notation Data) se indica que la entidad no es analizable y, en este caso, se ha asociado a la entidad `logo` con la notación `gif`.
+- La notación `gif` es una declaración del tipo MIME image/gif.
 
 {:.subsubsection}
 #### Entidades generales externas no analizables públicas - PUBLIC
 
-EJEMPLO Para declarar logo como entidad pública, se puede escribir:
+EJEMPLO Para declarar `logo` como entidad pública, se puede escribir:
 
 ```xml
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
@@ -1924,7 +1928,7 @@ _Visualización del archivo frase.xml en Google Chrome_
 {:.subsubsection}
 #### Referencia circular o recursiva de entidades
 
-EJEMPLO La DTD del siguiente documento XML no es correcta, ya que, la entidad frase1 ha sido referenciada en el valor de la entidad frase2, y al revés también:
+EJEMPLO La DTD del siguiente documento XML no es correcta, ya que, la entidad `frase1` ha sido referenciada en el valor de la entidad `frase2`, y al revés también:
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -1959,7 +1963,13 @@ En una DTD se pueden declarar dos tipos de notaciones: privadas y públicas. Par
 
 ```xml
 <!NOTATION nombre-de-la-notación SYSTEM "identificador-del-sistema">
+```
+
+```xml
 <!NOTATION nombre-de-la-notación PUBLIC "identificador-público">
+```
+
+```xml
 <!NOTATION nombre-de-la-notación PUBLIC "identificador-público" "identificador-del-sistema">
 ```
 
@@ -1989,13 +1999,11 @@ EJEMPLO En la DTD del siguiente documento XML, se indica que los elementos `frut
 </frutas>
 ```
 
-En la DTD de este ejemplo se está indicando que los valores -datos- de las entidades (`manzana` y `naranaja`) van a ser cargados desde una URI (Uniform Resource Identifier, Identificador Uniforme de Recurso). En este caso, se hace referencia a los archivos externos `manzana.gif`{: .filepath} y `naranja.gif`{: .filepath}.
+- En la DTD de este ejemplo se está indicando que los valores -datos- de las entidades (`manzana` y `naranaja`) van a ser cargados desde una URI (Uniform Resource Identifier, Identificador Uniforme de Recurso). En este caso, se hace referencia a los archivos externos `manzana.gif`{: .filepath} y `naranja.gif`{: .filepath}.
+- Con `NDATA` (Notation Data) se ha asociado a las entidades `manzana` y `naranaja` con la notación `gif`.
+- La notación `gif` es una declaración del tipo MIME image/gif.
 
-Con NDATA (Notation Data) se ha asociado a las entidades `manzana` y `naranaja` con la notación gif.
-
-La notación gif es una declaración del tipo MIME image/gif.
-
-EJEMPLO Si en el sistema existe, por ejemplo, un programa llamado `procesadorGIF.exe` en la carpeta `aplicaciones` capaz de procesar imágenes GIF (Graphics Interchange Format, Formato de Intercambio de Gráficos), también se podría escribir:
+EJEMPLO Si en el sistema existe, por ejemplo, un programa llamado `procesadorGIF.exe`{: .filepath} en la carpeta `aplicaciones`{: .filepath} capaz de procesar imágenes GIF (Graphics Interchange Format, Formato de Intercambio de Gráficos), también se podría escribir:
 
 ```xml
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
@@ -2157,7 +2165,7 @@ Obsérvese que, en este ejemplo, en los dos documentos XML asociados a la DTD ex
 {:.section}
 ## Espacios de nombres
 
-EJEMPLO Dado el siguiente documento XML (visto en el apartado espacios de nombres del tutorial de XML) bien formado, pero no validado, donde se utilizan dos espacios de nombres (XML Namespaces):
+EJEMPLO Dado el siguiente documento XML (visto en el apartado [espacios de nombres](https://www.abrirllave.com/xml/espacios-de-nombres.php) del tutorial de XML) bien formado, pero no validado, donde se utilizan dos espacios de nombres (XML Namespaces):
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
