--- a/_posts/2024-01-20-dtd.md
+++ b/_posts/2024-01-20-dtd.md
@@ -6,6 +6,9 @@ tags: [desarrollo de aplicaciones multiplataforma, lenguajes de marcas y sistema
 img_path: /assets/img/dtd/
 ---
 
+> Se recomienda la lectura de este artículo hasta la sección "7.5. Atributos de tipo IDREFS" incluida. El resto de secciones pueden ser leídas cuando se tenga la necesidad específica cuando se realice la tarea correspondiente.
+{:.prompt-info}
+
 {:.section}
 ## ¿Qué es DTD?
 
@@ -526,7 +529,7 @@ Por otra parte, si el elemento `cualquier_contenido` estuviese vacío, el docume
 En vez de `<cualquier_contenido></cualquier_contenido>`, también se puede escribir `<cualquier_contenido/>`.
 
 {:.subsection}
-### Elementos con contenido de tipo texto en una DTD - (#PCDATA)
+### Elementos con contenido de tipo texto - (#PCDATA)
 
 Para declarar en una DTD un elemento que pueda contener texto analizable, se tiene que indicar que su contenido es `(#PCDATA)`, (Parsed Character Data):
 
@@ -565,7 +568,7 @@ Ahora bien, el elemento `texto` podría estar vacío y el documento XML seguirí
 En vez de `<texto></texto>`, también se puede escribir `<texto/>`.
 
 {:.subsection}
-### Secuencias de elementos en una DTD
+### Secuencias de elementos
 
 En una DTD, un elemento (padre) puede ser declarado para contener a otro u otros elementos (hijos). En la sintaxis, los hijos -también llamados sucesores- tienen que escribirse entre paréntesis `()` y separados por comas `,`.
 
@@ -911,6 +914,9 @@ La sintaxis básica para declarar un atributo en una DTD es:
 <!ATTLIST nombre-del-elemento nombre-del-atributo tipo-de-atributo valor-del-atributo>
 ```
 
+{:.question}
+¿Qué es un atributo?
+
 {:.subsection}
 ### Declaración de un atributo indicando un valor por defecto
 
@@ -1201,6 +1207,9 @@ Hay que tener en cuenta que:
 
 En una DTD, los atributos declarados `IDREF` son aquellos cuyo valor tiene que existir en otro atributo `ID` del documento XML.
 
+{:.question}
+¿A qué equivaldría el atributo tipo `IDREF` en una base de datos relacional?
+
 EJEMPLO En la DTD del siguiente documento XML, se indica que los elementos `pelicula` que se escriban, deben incluir el atributo `direccion`, cuyo valor estará asignado a un atributo `ID` de otro elemento del documento. En este caso, el valor estará asignado a un atributo `coddir` de un elemento `director`:
 
 ```xml
@@ -1266,6 +1275,9 @@ EJEMPLO En la DTD del siguiente documento XML, se indica que el valor del atribu
 ```
 
 Obsérvese que, los valores de la lista de valores de un atributo `IDREFS`, se escriben separados por un espacio en blanco.
+
+{:.question}
+¿Cómo se separan los diferentes `IDREF` dentro de un `IDREFS`?
 
 {:.subsection}
 ### Atributos de tipo NMTOKEN
@@ -1562,6 +1574,9 @@ Por otro lado, las entidades paramétricas pueden ser:
 
 Las entidades generales pueden utilizarse en el cuerpo de un documento XML y en su DTD. Sin embargo, las entidades paramétricas solo pueden utilizarse dentro de la DTD.
 
+{:.question}
+¿Qué diferencia hay entre una entidad general y una entidad paramétrica?
+
 {:.subsection}
 ### Entidades generales internas analizables
 
@@ -1600,9 +1615,6 @@ Si este documento XML se visualizase en un navegador web, se vería algo parecid
 
 ![imgDescription](textos-con-entidades-generales-internas-analizables-en-una-dtd.gif)
 _Visualización del archivo textos.xml en Google Chrome_
-
-{:.question}
-¿Qué es una entidad general?
 
 {:.subsection}
 ### Entidades generales externas analizables
@@ -1667,6 +1679,9 @@ EJEMPLO Para declarar `escritor` como entidad general externa analizable públic
 </textos>
 ```
 
+{:.question}
+¿Qué diferencia hay entre una entidad pública y privada?
+
 {:.subsection}
 ### Entidades generales externas no analizables
 
@@ -1704,6 +1719,9 @@ EJEMPLO En la DTD del siguiente documento XML, se indica que el elemento `imagen
 - En la DTD de este ejemplo se está indicando que el valor -datos- de la entidad `logo` va a ser cargado desde una URI. En este caso, se hace referencia al archivo `logo.gif`{: .filepath}.
 - Con NDATA (Notation Data) se indica que la entidad no es analizable y, en este caso, se ha asociado a la entidad `logo` con la notación `gif`.
 - La notación `gif` es una declaración del tipo MIME image/gif.
+
+{:.question}
+¿Por qué una entidad puede NO ser analizable?
 
 {:.subsubsection}
 #### Entidades generales externas no analizables públicas - PUBLIC
