--- a/_posts/2024-01-29-tarea-dtd.md
+++ b/_posts/2024-01-29-tarea-dtd.md
@@ -40,11 +40,12 @@ mruizg_t09.zip
 │   ├───04_lugares.xml
 │   └───05_pizzas.xml
 │
-└───mruizg_a04
-    ├───01_declaraciones.xml
-    ├───02_despedidas.xml
-    ├───03_netflix.xml
-    └───04_estrellas.xml
+├───mruizg_a04
+│   ├───01_declaraciones.xml
+│   ├───02_despedidas.xml
+│   ├───03_netflix.xml
+│   └───04_estrellas.xml
+│
 ├───mruizg_a05_vuelos.xml
 ├───mruizg_a06_factura.xml
 └───mruizg_a07_liga.xml
